Divide styles between ./css/index.css and ./css/search.css. Remove showContainers construction (stop wrapping every showContainer into showContainers), wrap them into content instead.

--- a/css/index.css
+++ b/css/index.css
@@ -11,65 +11,6 @@ body {
   text-align: center;
 }
 
-.search-box {
-  border-radius: 5px;
-  margin: 75px auto 75px;
-  width: 350px;
-}
-
-.row {
-  align-items: center;
-  display: flex;
-}
-
-input {
-  background: transparent;
-  border: 0;
-  color: yellow;
-  flex: 1;
-  font-size: 18px;
-  height: 25px;
-  outline: 0;
-}
-
-button {
-  background: transparent;
-  border: 0;
-}
-
-button .fa-solid {
-  color: grey;
-  cursor: pointer;
-  font-size: 22px;
-  width: 25px;
-}
-
-.result-box ul {
-  border-top: 1px solid #999;
-  padding: 15px 10px;
-}
-
-.result-box ul li {
-  border-radius: 3px;
-  cursor: pointer;
-  list-style: none;
-  padding: 8px;
-}
-
-.result-box ul li:hover {
-  background: grey;
-}
-
-.result-box {
-  max-height: 250px;
-  overflow-y: scroll;
-  scrollbar-color: grey black;
-}
-
-.showContainer {
-  height: 350px;
-}
-
 img {
   float: left;
   margin-left: 30px;
@@ -82,4 +23,10 @@ h4,
 p,
 ul {
   color: yellow;
+}
+
+/* Every movie is wrapped in a show container
+Image on the left, and info on the right */
+.showContainer {
+  height: 350px;
 }
